# ntic_tac_toe

./: .clang-format  CMakeLists.txt
cmake/: StyleChecker.cmake  cpplint.cmake
include/: choose_side_state.hpp  common.hpp  dialog_box.hpp  game_engine.hpp  game_engine_fwd.hpp  main_menu_state.hpp  pause_state.hpp  player_side.hpp
include/game/: board.hpp  game.hpp  game_state.hpp  game_type.hpp
src/: choose_side_state.cpp  common.cpp  defs.hpp  game_engine.cpp  main.cpp  main_menu_state.cpp  pause_state.cpp  ui_cell.hpp  ui_main.hpp
src/game/: board.cpp  game_state.cpp  game_type.cpp
